# vibe-security-checker

./: .gitignore  .vibe-security-baseline.json  .vibe-security.json  CHANGELOG.md  LICENSE  README.md  SKILL.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  security-scan.yml  self-scan.yml
references/: ai-specific.md  auth.md  crypto.md  guardrails.md  infrastructure.md  injection.md  operations.md  secrets.md  supply-chain.md
scripts/: __init__.py  _baseline.py  _config.py  _models.py  _output.py  _rules.py  check_dependencies.py  cli.py  detect_project.py  generate_report.py  install_hooks.py  install_vscode.py  scan_git_history.py  scan_security.py
tests/: test_baseline.py  test_config.py  test_dedup_hints_hooks.py  test_dependencies.py  test_new_features.py  test_scanner.py  test_ssrf_jwt_headers_confidence_vscode_history.py  test_suppression_debug_https_gitignore_typosquat.py
